TiffPyramidMetadata: adding isReduced check before checking form factor